add thumbnail api

--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
-
+        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.novoda:bintray-release:+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,10 +20,10 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url 'https://dl.bintray.com/qichuan/maven/' }
         maven { url 'https://tokbox.bintray.com/maven' }
-        //Getui
-        maven { url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/" }
-        //umeng.
-        maven { url 'https://dl.bintray.com/umsdk/release' }
+    }
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
     }
 }
 
