--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'com.novoda:bintray-release:+'
+        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
+        //classpath 'com.novoda:bintray-release:+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
